# metagame-xm-server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.en.md  README.md
src/crossserver/: CMakeLists.txt  crossservermodule.cpp  crossservermodule.h  engineadapter.cpp  engineadapter.h  internalcomm.cpp  internalcomm.h  main.cpp
src/crossserver/config/: crossserverconfig.cpp  crossserverconfig.h  sharedconfig.cpp  sharedconfig.h
src/crossserver/crossrandactivity/: crossrandactivity.cpp  crossrandactivity.hpp  crossrandactivitymanager.cpp  crossrandactivitymanager.hpp
src/crossserver/crossrandactivity/impl/: crossrandactivitychongzhirank.cpp  crossrandactivitychongzhirank.hpp  crossrandactivitycloudpurchase.cpp  crossrandactivitycloudpurchase.hpp  crossrandactivityconsumerank.cpp  crossrandactivityconsumerank.hpp
src/crossserver/crossrank/: crosscouplerank.cpp  crosscouplerank.hpp  crosspersonrank.cpp  crosspersonrank.hpp
src/crossserver/crossserver/: crosslog.cpp  crosslog.hpp  crossmempool.cpp  crossserver.cpp  crossserver.h  messagegameworldhandler.cpp  rmibackobjdef.h
src/crossserver/crossserver/crossactivity/: crossactivity.cpp  crossactivity.hpp  crossactivitymanager.cpp  crossactivitymanager.hpp
src/crossserver/crossserver/crossstatus/: crossstatus.cpp  crossstatus.hpp
src/crossserver/crossserver/crossuser/: crossoperateregister.cpp  crossoperateregister.hpp  crossuser.cpp  crossuser.h  crossusermanager.cpp  crossusermanager.hpp
src/crossserver/crossserver/protocal/: msgcpp.cpp  msgcross.h
src/crossserver/rmiclient/: rmicross.cpp  rmicross.hpp
src/dataaccess/: CMakeLists.txt  darmiinit.cpp  darmiinit.h  dataaccess.cpp  dataaccess.h  dataaccesslog.cpp  dataaccesslog.hpp  databaselayer.cpp  databaselayer.h  engineadapter.cpp  engineadapter.h  main.cpp  rolecachemanager.cpp  rolecachemanager.hpp
src/dataaccess/crossrolecache/: crossrolecachemanager.cpp  crossrolecachemanager.hpp
src/dataaccess/datalayer/: commandmanager.cpp  commandmanager.h  datalayer.vcproj  tablefactroy.h
src/dataaccess/datalayer/cache/: cachebase.cpp  cachebase.h  cachecmpnode.cpp  cachecmpnode.h  cachecommand.h  cachemaker.cpp  cachemaker.h  cachemanager.cpp  cachemanager.h  cachenode.h  cachetransaction.cpp  cachetransaction.h
src/dataaccess/datalayer/db/: connection.h  connfactroy.h  connpool.cpp  connpool.h  dbdef.h  resultset.h  statement.h  transaction.h
src/dataaccess/datalayer/dbopera/: dataadapter.cpp  dataadapter.h  dbcommand.cpp  dbcommand.h  sqlmaker.cpp  sqlmaker.h  sqlnode.cpp  sqlnode.h
src/dataaccess/datalayer/tabledef/: registertables.cpp  registertables.h  tabledef.cpp  tabledef.h  tablefactroy.cpp  tablefieldid.h  tableid.h
src/dataaccess/rmiobj/: rmicross.cpp  rmicross.hpp  rmidef.hpp  rmiglobal.cpp  rmiglobal.hpp  rmilogin.cpp  rmilogin.h  rmirole.cpp  rmirole.h  rmirolesave.cpp  rmisystem.cpp  rmisystem.h
src/gameworld/: CMakeLists.txt  forcekickuserdelay.cpp  forcekickuserdelay.hpp  main.cpp  resource.h  serverlogic.cpp  serverlogic.h  stdafx.h  todo.txt
src/gameworld/gameworld/: checkresourcecenter.cpp  checkresourcecenter.hpp  engineadapter.cpp  engineadapter.h  gamecommon.cpp  gamecommon.h  gamedef.h  gamelog.cpp  gamelog.h  gamemempool.cpp  gstr.cpp  gstr.h  hightimermgr.cpp  hightimermgr.h  internalcomm.cpp  internalcomm.h  rmibackobjdef.h  systemcmddef.h  world.cpp  world.h  worldinit.cpp
src/gameworld/gameworld/ai/: aibase.cpp  aibase.hpp
src/gameworld/gameworld/chat/: channel.cpp  channel.h  chatmanager.cpp  chatmanager.h  chatuser.cpp  chatuser.h  msgboarditem.cpp  msgboarditem.h
src/gameworld/gameworld/config/: activedegreeconfig.cpp  activedegreeconfig.hpp  activitymsgconfig.cpp  activitymsgconfig.hpp  agentadapterconfig.cpp  agentadapterconfig.hpp  chengzhangdan.hpp  crossrankweekrewardconfig.cpp  crossrankweekrewardconfig.hpp  crossteamfbconfig.cpp  crossteamfbconfig.hpp  doorconfig.cpp  doorconfig.h  dropextendconfig.cpp  dropextendconfig.hpp  dynamicadjustconfig.cpp  dynamicadjustconfig.hpp  dynamiccapadjustconfig.cpp  dynamiccapadjustconfig.hpp  expbottleconfig.cpp  expbottleconfig.hpp  fallingmsgconfig.cpp  fallingmsgconfig.hpp  fbconfig.cpp  fbconfig.hpp  fbsceneconfig.cpp  fbsceneconfig.hpp  flycorrectionconfig.cpp  flycorrectionconfig.hpp  giftreplaceconfig.cpp  giftreplaceconfig.hpp  guildactivityconfig.cpp  guildactivityconfig.hpp  guildconfig.cpp  guildconfig.hpp  guildtowerdefendconfig.cpp  guildtowerdefendconfig.hpp  joinlimitconfig.cpp  joinlimitconfig.hpp  knapsackconfig.cpp  (+54 more)
src/gameworld/gameworld/doublesidefb/: doublesidefbmanager.cpp  doublesidefbmanager.hpp
src/gameworld/gameworld/effect/: buffmanager.cpp  buffmanager.hpp  effectbase.cpp  effectbase.hpp  effectlist.cpp  effectlist.hpp
src/gameworld/gameworld/equipment/: equipment.cpp  equipment.h  equipmentfunction.cpp  equipmentfunction.h  equipmentmanager.cpp  equipmentmanager.h  stonemananger.cpp  stonemananger.hpp  suitbase.cpp  suitbase.hpp
src/gameworld/rmiclient/: rmiglobal.cpp  rmiglobal.hpp  rmigroleclient.cpp  rmigroleclient.h  rmiloginclient.cpp  rmiloginclient.h  rmiroleclient.cpp  rmiroleclient.h
src/gateway/: CMakeLists.txt  engineadapter.cpp  engineadapter.h  gatewaymodule.cpp  gatewaymodule.h  internalcomm.cpp  internalcomm.h  main.cpp  stdafx.h
src/loginserver/: CMakeLists.txt  engineadapter.cpp  engineadapter.h  internalcomm.cpp  internalcomm.h  loginservermodule.cpp  loginservermodule.h  main.cpp  todo.txt
src/loginserver/config/: loginconfig.cpp  loginconfig.h
src/loginserver/rmiclient/: rmidaloginclient.cpp  rmidaloginclient.h  rmidaroleclient.cpp  rmidaroleclient.h
src/loginserver/server/: forbidregisterconfig.cpp  forbidregisterconfig.hpp  gameserver.cpp  gameserver.h  iplimit.cpp  iplimit.hpp  loginlog.cpp  loginlog.h  loginmempool.cpp  loginserver.cpp  loginserver.h  loginserverlogin.cpp  loginserverregister.cpp  loginusertrace.cpp  loginusertrace.hpp  mergeloginmanager.cpp  mergeloginmanager.h  rmibackobjdef.h  roleinitattr.cpp  roleinitattr.h
(+35941 files in other folders)
